#98 - lock main screen, blurred background, wrong positioning fix, no scroll problem, scrollable menu improvements on touch devices

--- a/template/css/general.css
+++ b/template/css/general.css
@@ -1,6 +1,8 @@
+
 .bx-main {
 	position: relative;
 	min-height: 100%;
+    transition: filter 0.2s ease-in-out, -webkit-filter 0.2s ease-in-out;
 }
 
 .bx-page-image-container img,
