--- a/template/css/menu.css
+++ b/template/css/menu.css
@@ -138,9 +138,10 @@ ul.bx-menu-ver {
 }
 
 #bx-menu-main-container-scroller {
-    overflow:auto;
     height:60px;
     height:4rem;
+    overflow:auto;
+    -webkit-overflow-scrolling:touch;
 }
 
 #bx-menu-main-submenu,
@@ -267,8 +268,9 @@ ul.bx-menu-toolbar li .sys-icon {
 /* --------------- floating blocks menu */
 
 .bx-sliding-menu-main {
-    overflow-x:scroll;
-    opacity:0.9
+    opacity:0.9;
+    overflow-x:auto;
+    -webkit-overflow-scrolling:touch;
 }
 .bx-sliding-menu-main ul.bx-menu-floating-blocks-big {
     display:table;
